<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:layout_gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center">
    <EditText
        android:id="@+id/plant_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_plant_hint"
        android:gravity="center_horizontal"/>
    <ImageView
        android:id="@+id/plant_photo"
        android:layout_marginTop="16dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerInside"
        android:cropToPadding="true"
        android:background="@android:color/darker_gray"
        android:layout_gravity="center"/>
    <ImageButton
        android:id="@+id/plant_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_camera"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/frequency_picker_text1"
            android:layout_margin="8dp"
            android:gravity="right"
            android:layout_gravity="center"
            />
        <NumberPicker
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:id="@+id/frequency_picker"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/frequency_picker_text2"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/plant_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/about_plant_hint"
        android:layout_marginTop="32dp"
        android:inputType="textMultiLine"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_confirm_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_confirm"
        android:contentDescription="@string/confirm"
        android:layout_margin="16dp" />
</FrameLayout>